first page change

--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -27,7 +27,7 @@ ul, li {
     float: left;
     margin-left: 120px;
     font-size: 30px;
-    text-shadow: 5px -5px 40px #093a91, -5px 5px 40px #093a91;
+    text-shadow: 0px 0px 10px #0066ff, 0px 0px 20px #0066ff,0px 0px 40px #0066ff,0px 0px 80px #0066ff;
     position: relative;
 }
 
@@ -167,7 +167,7 @@ ul, li {
 #container {
     opacity: 0;
     transition: opacity 1s;
-    background: url(../img/big-bg.jpg) no-repeat !important;
+    background: url(../img/big-bg.png) no-repeat !important;
     background-size: 100%;
 }
 
