--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -21,13 +21,16 @@ ul, li {
     z-index: 1000;
     color: #fff;
     font-size: 16px;
+    background: -webkit-linear-gradient(top, rgba(0, 115, 255, 0.3), rgba(0,0,0,0));
+
 }
 
 .title {
     float: left;
     margin-left: 120px;
     font-size: 30px;
-    text-shadow: 0px 0px 10px #0066ff, 0px 0px 20px #0066ff,0px 0px 40px #0066ff,0px 0px 80px #0066ff;
+    text-shadow: 0 0 40px rgba(0, 79, 255, 0.79), 0 0 30px rgba(0, 102, 255, 0.88), 0 0 20px rgb(0, 78, 255), 0 0 10px rgba(0, 43, 255, 0.64);
+    /*text-shadow: 0px 0px 10px #0066ff, 0px 0px 20px #0066ff,0px 0px 40px #0066ff,0px 0px 80px #0066ff;*/
     position: relative;
 }
 
