--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -8,7 +8,7 @@ body, html {
     height: 100%;
     background: #000
 }
-
+.amap-toolbar{display: none;}
 ul, li {
     list-style: none;
     margin: 0;
