--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -6,7 +6,7 @@ body, html {
     font: 12px/16px Verdana, Helvetica, Arial, sans-serif;
     width: 100%;
     height: 100%;
-    background: #000
+    background: #000;
 }
 .amap-toolbar{display: none;}
 ul, li {
@@ -20,7 +20,7 @@ ul, li {
     z-index: 1000;
     color: #fff;
     font-size: 16px;
-    background: -webkit-linear-gradient(top, rgba(0, 115, 255, 0.3), rgba(0,0,0,0));
+    /*background: -webkit-linear-gradient(top, rgba(0, 115, 255, 0.3), rgba(0,0,0,0));*/
 
 }
 
@@ -302,8 +302,8 @@ ul, li {
 
 .con-statis .base-info .name {
     font-size: 36px;
-    font-weight: bold;
     line-height: 40px;
+    font-weight: bold;
 }
 
 .con-statis .base-info .time {
