--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -140,7 +140,20 @@ ul, li {
     background-position: 0 0;
 }
 
-.nav li a.active {
+
+.step1 .menu-step1 {
+    background: url(../img/light6.png) no-repeat, url(../img/header-btn.png);
+    background-position: -20px -8px, 0px 0;
+    transform: translate3d(0, 0, 0);
+    -webkit-animation: run-light 10s linear infinite; /*Safari and Chrome*/
+}
+.step2 .menu-step2 {
+    background: url(../img/light6.png) no-repeat, url(../img/header-btn.png);
+    background-position: -20px -8px, 0px 0;
+    transform: translate3d(0, 0, 0);
+    -webkit-animation: run-light 10s linear infinite; /*Safari and Chrome*/
+}
+.step3 .menu-step3 {
     background: url(../img/light6.png) no-repeat, url(../img/header-btn.png);
     background-position: -20px -8px, 0px 0;
     transform: translate3d(0, 0, 0);
@@ -179,12 +192,23 @@ ul, li {
 
 .echart-con {
     position: fixed;
-    bottom: 20px;
+    bottom: 0;
     left: 20px;
     right: 20px;
     z-index: 1000;
     perspective: 600px;
     transform-style: preserve-3d;
+    height: 238px;
+    background: url(../img/step3_zone_border.png) no-repeat,url(../img/step3_zone_bg1.png) 27px 21px no-repeat;
+    overflow: hidden;
+    transform: translate3d(0,500px,0);
+    opacity: 0;
+    transition: all .5s;
+}
+
+.step3 .echart-con{
+    opacity: 1;
+    transform: translate3d(0,0,0)
 }
 
 .echart-con .item {
@@ -203,6 +227,14 @@ ul, li {
     background-size: cover;
     padding: 27px 20px 0px 24px;
     /*  */
+}
+
+.itemdemo{
+    float: left;
+    box-sizing: border-box;
+    width: calc(20% - 15px);
+    margin-right: 10px;
+    padding: 40px 10px 19px 44px;
 }
 
 .echart-con .item.loaded {
@@ -295,7 +327,9 @@ ul, li {
     font-size: 16px;
     z-index: 101;
 }
-
+.con-statis .base-info{
+    height: 100px;
+}
 .con-statis .base-info > label {
     display: block;
 }
@@ -304,10 +338,26 @@ ul, li {
     font-size: 36px;
     line-height: 40px;
     font-weight: bold;
+    width: 300px;
+    height: 66px;
+    position: absolute;
+    top: 26px;
+    left: 37px;
 }
-
+.step1 .con-statis .base-info .name{
+    background: url(../img/step1_title.png) no-repeat;
+}
+.step2 .con-statis .base-info .name{
+    background: url(../img/step2_title.png) no-repeat;
+}
+.step3 .con-statis .base-info .name{
+    background: url(../img/step3_title.png) no-repeat;
+}
 .con-statis .base-info .time {
     line-height: 38px;
+    position: absolute;
+    color: rgba(255,255,255,.8);
+    top: 80px;
 }
 
 .con-statis .lbl-name {
@@ -315,9 +365,21 @@ ul, li {
     line-height: 56px;
 }
 
+.step1  .turnover,.step2  .turnover
+{
+    opacity: 1;
+    transform:translate3d(0, 0, 0)
+}
+.step3  .turnover
+{
+    opacity: 0;
+    transform:translate3d(-600px, 0, 0)
+}
 .con-statis .turnover {
     margin-top: 22px;
     position: relative;
+    opacity: 1;
+    transition: transform .5s, opacity .3s;
 }
 
 .con-statis .turnover img {
@@ -346,10 +408,21 @@ ul, li {
         transform: translate3d(-115px, 42px, 0) scale3d(1, 1, 1);
     }
 }
-
+.step1  .nums,.step2 .nums
+{
+    opacity: 1;
+    transform:translate3d(0, 0, 0)
+}
+.step3  .nums
+{
+    opacity: 0;
+    transform:translate3d(-600px, 0, 0)
+}
 .con-statis .nums {
     margin-top: 16px;
     position: relative;
+    opacity: 1;
+    transition: transform .5s,opacity .3s;
 }
 
 .con-statis .nums img {
@@ -379,6 +452,32 @@ ul, li {
     }
 }
 
+.step1 .overview, .step2 .overview
+{
+    opacity: 0;
+    transform:translate3d(600px, 0, 0)
+}
+.step3 .overview
+{
+    opacity: 1;
+    transform:translate3d(0, 0, 0)
+}
+.overview{
+    position: absolute;
+    top:140px;
+    left:40px;
+    opacity: 1;
+    transition: transform .5s,opacity .3s;
+}
+.overview .map{
+    
+    border: 1px solid #1da9dd;
+    border-radius: 10px;
+    background: #02102f;
+    width:277px;
+    height: 209px;
+    box-shadow: inset 0 0 50px rgb(3, 191, 244), inset 0 0 80px rgba(3, 68, 244, 0.82), inset 0 0 150px rgba(0, 74, 255, 0.35),3px 3px 15px 3px rgba(0,0,0,.8);
+}
 
 
 
@@ -422,4 +521,21 @@ ul, li {
     left: -5px;
     bottom:-5px;
     z-index: -1;
+}
+
+.step3-mask{
+    width:100%;
+    height: 100%;
+    position: fixed;
+    background: url(../img/bg1.png) no-repeat;
+    background-size: cover;
+    z-index: 100;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity .3s;
+}
+.step3 .step3-mask{
+    opacity: 1;
 }
