--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -340,8 +340,8 @@ ul, li {
     z-index: 1000;
     perspective: 600px;
     transform-style: preserve-3d;
-    background: url(../img/step3-zone-border2.png),url(../img/step3-zone-bg3.png) no-repeat;
-    background-size: 100% 100%;
+    background: url(../img/step3-zone-border2.png),url(../img/step3-zone-bg3.png) no-repeat 22px 24px;
+    background-size: 100% 100%,271px 286px;
     transform: translate3d(0,500px,0);
     opacity: 0;
     transition: all .5s;
