--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -18,6 +18,22 @@ ul, li {
     list-style: none;
     margin: 0;
 }
+#login{
+    position:absolute;
+    top:0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,.8);
+    transition: all 1s;
+    opacity: 0;
+    z-index: 999;
+    pointer-events: none;
+}
+#login.loaded{
+    opacity: 1;
+    pointer-events:unset;
+}
 .header {
     line-height: 100px;
     width: 100%;
