--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -24,7 +24,7 @@ ul, li {
     left: 0;
     height: 100%;
     width: 100%;
-    background: rgba(0,0,0,.8);
+    background: rgb(0,0,0);
     transition: all 1s;
     opacity: 0;
     z-index: 1001;
@@ -34,15 +34,85 @@ ul, li {
     opacity: 1;
     pointer-events:unset;
 }
+.login-title{
+    text-align: center;
+    color: #fff;
+    font-size: 40px;
+    font-family: console;
+    height: 80px;
+    transition:all .5s;
+}
+.login-title{
+    text-align: center;
+    color: #fff;
+    font-size: 40px;
+    font-family: console;
+    height: 80px;
+    transition:all .5s ease-in-put;
+}
+.login.ok .login-title{
+    transform: translateY(100px)
+}
+.form{
+    opacity: 1;
+    transition:all .4s ease-in-put;
+}
+.login.ok .form{
+    opacity: 0;
+}
 .login-ctx{
     position: absolute;
-    right: 20%;
-    top: 20%;
-    background: rgba(255,255,255,0.3);
-    width: 300px;
-    height: 400px;
-    padding: 50px;
+    top: 50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    margin: auto;
+}
+.itemrow{
+    position: relative;
+}
+.login .iconfont{
+    position: absolute;
+    left: 12px;
+    font-size: 24px;
+    color: #666;
+    top: 40px;
+}
+
+.login .txt{
+    width: 400px;
+    height: 55px;
+    line-height: 55px;
+    background: rgba(0,0,0,.6);
     box-sizing: border-box;
+    margin-top: 20px;
+    padding-left: 50px;
+    font-size: 16px;
+    border-radius: 5px;
+    font-family: console;
+    color: #666;
+    outline: none;
+    border: 1px solid transparent;
+    transition: all .5s;
+}
+.login .txt:hover,.login .txt:focus{
+    border:1px solid rgba(255,255,255,.8);
+}
+.login .btn-login{
+    width: 400px;
+    height: 55px;
+    line-height: 55px;
+    background: rgba(255,255,255,.7);
+    box-sizing: border-box;
+    margin-top: 20px;
+    text-align: center;
+    font-size: 16px;
+    font-family: console;
+    cursor: pointer;
+    color: #333;
+    transition: all .5s;
+}
+.btn-login:hover{
+    background: #fff;
 }
 
 .header {
