--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -495,14 +495,14 @@ ul, li {
 .echart-lcon{
     position: fixed;
     left: 48px;
-    bottom: 230px;
-    height: 320px;
+    bottom: 240px;
+    height: 380px;
     width: 310px;
     z-index: 1000;
     perspective: 600px;
     transform-style: preserve-3d;
     background: url(../img/step3-zone-border2.png),url(../img/step3-zone-bg3.png) no-repeat 22px 24px;
-    background-size: 100% 100%,271px 286px;
+    background-size: 100% 100%,271px 345px;
     transform: translate3d(0,500px,0);
     opacity: 0;
     transition: all .5s;
@@ -510,6 +510,11 @@ ul, li {
 .step3 .echart-lcon{
     opacity: 1;
     transform: translate3d(0,0,0)
+}
+@media screen and (max-height: 999px) {
+    .echart-lcon {
+        bottom: 260px;
+    }
 }
 
 .echart-lcon .item{
@@ -836,8 +841,10 @@ ul, li {
     top:265px;
     left:60px;
     opacity: 0;
+    z-index: 23;
     transform:translate3d(600px, 0, 0);
-    transition: transform .5s,opacity .3s;
+    transition: all .5s;
+    width: 279px;
 }
 .overview .map{
     
@@ -845,11 +852,17 @@ ul, li {
     border-radius: 10px;
     background: #02102f;
     width:277px;
-    height: 209px;
+    height: 170px;
     box-shadow: inset 0 0 50px rgb(3, 191, 244), inset 0 0 80px rgba(3, 68, 244, 0.82), inset 0 0 150px rgba(0, 74, 255, 0.35),3px 3px 15px 3px rgba(0,0,0,.8);
 }
-
-
+@media screen and (max-height: 999px) {
+    .overview {
+        bottom: 260px;
+        right: 60px;
+        left: auto;
+        top: auto;
+    }
+}
 
 .info-window{
    width: 110px;
