--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -688,8 +688,12 @@ ul, li {
 .mt-number-animate .mt-number-animate-dom .mt-number-animate-span {
     width: 100%;
     float: left;
+    height: 57px;
 }
-
+.mt-number-animate .mt-number-animate-dom .mt-number-animate-span>img{
+    height: 100%;
+    transform: scale(1.3);
+}
 .con-statis {
     position: fixed;
     left: 28px;
@@ -721,15 +725,18 @@ ul, li {
     position: absolute;
     top: 26px;
     left: 37px;
+    background: url(../img/step-name.png) no-repeat;
+    background-position: 0px 0px;
+    transition: all 1s;
 }
 .step1 .con-statis .base-info .name{
-    background: url(../img/step1_title.png) no-repeat;
+    background-position: 0px 0px;
 }
 .step2 .con-statis .base-info .name{
-    background: url(../img/step2_title.png) no-repeat;
+    background-position: 0px -76px;
 }
 .step4 .con-statis .base-info .name,.step3 .con-statis .base-info .name{
-    background: url(../img/step3_title.png) no-repeat;
+    background-position: 0px -149px;
 }
 .con-statis .base-info .time {
     line-height: 38px;
@@ -760,7 +767,7 @@ ul, li {
     transition: transform .5s, opacity .3s;
 }
 
-.con-statis .turnover img {
+.con-statis .turnover>img {
     position: absolute;
     z-index: 1;
     transform: translate3d(-115px, 42px, 0);
@@ -803,10 +810,10 @@ ul, li {
     transition: transform .5s,opacity .3s;
 }
 
-.con-statis .nums img {
+.con-statis .nums>img {
     position: absolute;
     z-index: 1;
-    transform: translate3d(370px, -17px, 0);
+    transform: translate3d(220px, -17px, 0);
     -webkit-animation: trunover-light2 8s linear 1s infinite;
     -o-animation: trunover-light2 8s linear 1s infinite;
     animation: trunover-light2 8s linear 1s infinite;
@@ -814,10 +821,10 @@ ul, li {
 
 @keyframes trunover-light2 {
     0% {
-        transform: translate3d(370px, -17px, 0) scale3d(1, 1, 1);
+        transform: translate3d(220px, -17px, 0) scale3d(1, 1, 1);
     }
     37% {
-        transform: translate3d(370px, -17px, 0) scale3d(1.2, 1.2, 1);
+        transform: translate3d(220px, -17px, 0) scale3d(1.2, 1.2, 1);
     }
     50% {
         transform: translate3d(-25px, -17px, 0) scale3d(1, 1, 1);
@@ -826,7 +833,7 @@ ul, li {
         transform: translate3d(-25px, -17px, 0) scale3d(1.2, 1.2, 1);
     }
     100% {
-        transform: translate3d(370px, -17px, 0) scale3d(1, 1, 1);
+        transform: translate3d(220px, -17px, 0) scale3d(1, 1, 1);
     }
 }
 
