--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -114,7 +114,10 @@ ul, li {
 .btn-login:hover{
     background: #fff;
 }
-
+#clayer,#particles {
+    width: 100%;
+    height: 35%;
+}
 .header {
     line-height: 100px;
     width: 100%;
@@ -507,7 +510,7 @@ ul, li {
     opacity: 0;
     transition: all .5s;
 }
-.step3 .echart-lcon{
+.echart-lcon.loaded{
     opacity: 1;
     transform: translate3d(0,0,0)
 }
@@ -592,7 +595,7 @@ ul, li {
     transition: all .5s;
 }
 
-.step3 .echart-con{
+.echart-con.loaded{
     opacity: 1;
     transform: translate3d(0,0,0)
 }
@@ -848,7 +851,7 @@ ul, li {
 }
 
 
-.step3 .overview
+.overview.loaded
 {
     opacity: 1;
     transform:translate3d(0, 0, 0)
