--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -497,15 +497,17 @@ ul, li {
 
 .echart-lcon{
     position: fixed;
-    left: 48px;
+    left: 60px;
     bottom: 240px;
-    height: 380px;
-    width: 310px;
+    height: 365px;
+    width: 276px;
     z-index: 1000;
     perspective: 600px;
     transform-style: preserve-3d;
-    background: url(../img/step3-zone-border2.png),url(../img/step3-zone-bg3.png) no-repeat 22px 24px;
-    background-size: 100% 100%,271px 345px;
+    /*background: url(../img/step3-zone-border2.png),url(../img/step3-zone-bg3.png) no-repeat 22px 24px;
+    background-size: 100% 100%,271px 345px;*/
+    background: url('../img/step3-box2.png') no-repeat;
+    background-size: 100% 100%;
     transform: translate3d(0,500px,0);
     opacity: 0;
     transition: all .5s;
@@ -521,7 +523,7 @@ ul, li {
 }
 
 .echart-lcon .item{
-    margin-left: 20px;
+    margin-left: 5px;
     line-height: 0;
     height: 0;
     width: 100%;
@@ -540,7 +542,7 @@ ul, li {
     opacity: 1;
 }
 .echart-lcon .item:first-child{
-    margin-top: 26px;
+    margin-top: 16px;
 }
 .echart-lcon .item .num{
     float: left;
@@ -566,7 +568,7 @@ ul, li {
 }
 .echart-lcon .item .line{
     float: left;
-    width:50%;
+    width:60%;
     height: 100%;
     background: url('../img/line-bg.png') no-repeat;
     background-position: 0 6px;
@@ -587,7 +589,8 @@ ul, li {
     perspective: 600px;
     transform-style: preserve-3d;
     height: 238px;
-    background: url(../img/step3_zone_border.png) no-repeat,url(../img/step3_zone_bg1.png) no-repeat;
+    /*background: url(../img/step3_zone_border.png) no-repeat,url(../img/step3_zone_bg1.png) no-repeat;*/
+    background: url(../img/step3-box3.png) no-repeat;
     background-size: 100% 100%;
     overflow: hidden;
     transform: translate3d(0,500px,0);
@@ -608,11 +611,11 @@ ul, li {
     transition: transform 1s;
     transform: rotateX(90deg);
     background-size: cover;
-    padding: 27px 20px 0px 20px;
+    padding: 20px 20px 0px 20px;
     /*  */
 }
 .echart-con .item:first-child{
-    padding: 27px 17px 0px 23px;
+    padding: 20px 17px 0px 23px;
 }
 
 .itemdemo{
@@ -871,9 +874,9 @@ ul, li {
     border: 1px solid #1da9dd;
     border-radius: 10px;
     background: #02102f;
+    box-shadow: inset 0 0 50px rgb(3, 191, 244), inset 0 0 80px rgba(3, 68, 244, 0.82), inset 0 0 150px rgba(0, 74, 255, 0.35),3px 3px 15px 3px rgba(0,0,0,.8);
     width:277px;
     height: 170px;
-    box-shadow: inset 0 0 50px rgb(3, 191, 244), inset 0 0 80px rgba(3, 68, 244, 0.82), inset 0 0 150px rgba(0, 74, 255, 0.35),3px 3px 15px 3px rgba(0,0,0,.8);
 }
 @media screen and (max-height: 999px) {
     .overview {
