--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -133,9 +133,13 @@ ul, li {
     float: left;
     margin-left: 120px;
     font-size: 30px;
-    text-shadow: 0 0 40px rgba(0, 79, 255, 0.79), 0 0 30px rgba(0, 102, 255, 0.88), 0 0 20px rgb(0, 78, 255), 0 0 10px rgba(0, 43, 255, 0.64);
+    /*text-shadow: 0 0 40px rgba(0, 79, 255, 0.79), 0 0 30px rgba(0, 102, 255, 0.88), 0 0 20px rgb(0, 78, 255), 0 0 10px rgba(0, 43, 255, 0.64);*/
     /*text-shadow: 0px 0px 10px #0066ff, 0px 0px 20px #0066ff,0px 0px 40px #0066ff,0px 0px 80px #0066ff;*/
     position: relative;
+}
+.title>img{
+    margin-top:2px;
+    margin-left: -15px;
 }
 
 .title::before {
@@ -637,26 +641,37 @@ ul, li {
 .con-panel {
     position: fixed;
     top: 0;
-    width: 120px;
+    width: 130px;
     height: 100%;
     z-index: 100;
     pointer-events: none;
 }
 
+.top-panel{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100px;
+    z-index: 101;
+    pointer-events: none;
+    background: linear-gradient(to bottom, rgba(4, 31, 97, 1),rgba(4, 31, 97, .7), rgba(4,31,97,0)); /* 标准的语法（必须放在最后） */
+}
+
 .left-panel {
     left: 0;
-    background: -webkit-linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); /* Safari 5.1 - 6.0 */
-    background: -o-linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); /* Opera 11.1 - 12.0 */
-    background: -moz-linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); /* Firefox 3.6 - 15 */
-    background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); /* 标准的语法（必须放在最后） */
+    background: -webkit-linear-gradient(to right, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0)); /* Safari 5.1 - 6.0 */
+    background: -o-linear-gradient(to right, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0)); /* Opera 11.1 - 12.0 */
+    background: -moz-linear-gradient(to right, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0)); /* Firefox 3.6 - 15 */
+    background: linear-gradient(to right, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0)); /* 标准的语法（必须放在最后） */
 }
 
 .right-panel {
     right: 0;
-    background: -webkit-linear-gradient(to left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); /* Safari 5.1 - 6.0 */
-    background: -o-linear-gradient(to left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); /* Opera 11.1 - 12.0 */
-    background: -moz-linear-gradient(to left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); /* Firefox 3.6 - 15 */
-    background: linear-gradient(to left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); /* 标准的语法（必须放在最后） */
+    background: -webkit-linear-gradient(to left, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0)); /* Safari 5.1 - 6.0 */
+    background: -o-linear-gradient(to left, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0)); /* Opera 11.1 - 12.0 */
+    background: -moz-linear-gradient(to left, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0)); /* Firefox 3.6 - 15 */
+    background: linear-gradient(to left, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0)); /* 标准的语法（必须放在最后） */
 }
 
 /*数字滚动插件的CSS可调整样式*/
@@ -702,7 +717,7 @@ ul, li {
 }
 .con-statis {
     position: fixed;
-    left: 28px;
+    left: 13px;
     top: 140px;
     background: url(../img/light8.png) no-repeat, url(../img/line.png) no-repeat;
     background-position: -4px 13px, 0 0;
@@ -710,7 +725,7 @@ ul, li {
     background-position: 0 0;
     background-blend-mode: screen;*/
     color: #fff;
-    padding: 36px 0 0 55px;
+    padding: 26px 0 0 55px;
     font-size: 16px;
     pointer-events: none;
     z-index: 101;
@@ -736,30 +751,31 @@ ul, li {
     transition: all 1s;
 }
 .step1 .con-statis .base-info .name{
-    background-position: 0px 0px;
+    background-position: 0px -6px;
 }
 .step2 .con-statis .base-info .name{
-    background-position: 0px -76px;
+    background-position: 0px -62px;
 }
 .step4 .con-statis .base-info .name,.step3 .con-statis .base-info .name{
-    background-position: 0px -149px;
+    background-position: 0px -155px;
 }
 .con-statis .base-info .time {
     line-height: 38px;
     position: absolute;
     color: rgba(255,255,255,.8);
-    top: 80px;
+    top: 70px;
 }
 .con-statis .base-info .weather {
     line-height: 38px;
-    color: #fff;
-    top: 80px;
+    color: rgba(255,255,255,.8);
+    top: 70px;
     left: 245px;
     position: absolute;
     display: none;
 }
 .con-statis .base-info .weather i{
     font-weight: bold;
+    color: rgba(255,255,255,.8);
 }
 .con-statis .lbl-name {
     font-size: 18px;
@@ -1202,4 +1218,36 @@ ul, li {
     left:-3.5px;
     top:-4px;
     transform: rotate(270deg)
+}
+
+.step3 .temp-box{
+    opacity: 1;
+}
+.temp-box{
+    position:fixed;
+    opacity: 0;
+    z-index: 1000;;
+}
+.temp-box img{
+    width: 100%;
+    height:100%;
+}
+
+.temp-box1{
+    height: 525px;
+    width:280px;
+    left: 45px;
+    bottom:265px;
+}
+.temp-box2{
+    height: 245px;
+    bottom: 0px;
+    right: 45px;
+    left: 45px;
+}
+.temp-box3{
+    width: 280px;
+    height: 225px;
+    right: 45px;
+    bottom:265px;
 }
