--- a/css/3Dmap.css
+++ b/css/3Dmap.css
@@ -141,6 +141,8 @@ ul, li {
 .title>img{
     margin-top:2px;
     margin-left: -15px;
+    transform: scale(.7);
+    transform-origin: 0%;
 }
 
 .title::before {
@@ -220,9 +222,10 @@ ul, li {
 }
 
 .nav {
-    float: right;
-    transform: translate3d(870px,0,0);
-    margin-top:15px;
+    position: fixed;
+    
+    margin-top: 15px;
+    right: 0;
     -webkit-transition: all .5s;
     -moz-transition: all .5s;
     -ms-transition: all .5s;
@@ -231,7 +234,7 @@ ul, li {
 }
 
 .nav-active{
-    transform: translate3d(-40px,0,0);
+  
 }
 
 .nav li {
@@ -502,29 +505,23 @@ ul, li {
 
 .echart-lcon{
     position: fixed;
-    left: 60px;
+    /* left: 60px; */
     bottom: 240px;
     height: 365px;
     width: 276px;
     z-index: 1000;
     perspective: 600px;
     transform-style: preserve-3d;
-    /*background: url(../img/step3-zone-border2.png),url(../img/step3-zone-bg3.png) no-repeat 22px 24px;
-    background-size: 100% 100%,271px 345px;*/
-    background: url('../img/step3-box2.png') no-repeat;
+    background: url(../img/step3-box2.png) no-repeat;
     background-size: 100% 100%;
-    transform: translate3d(0,500px,0);
     opacity: 0;
     transition: all .5s;
+    transform: scale(.6);
+    bottom: 100px;
+    right: -30px;
 }
 .echart-lcon.loaded{
     opacity: 1;
-    transform: translate3d(0,0,0)
-}
-@media screen and (max-height: 999px) {
-    .echart-lcon {
-        bottom: 260px;
-    }
 }
 
 .echart-lcon .item{
@@ -593,7 +590,7 @@ ul, li {
     z-index: 1000;
     perspective: 600px;
     transform-style: preserve-3d;
-    height: 238px;
+    height: 158px;
     /*background: url(../img/step3_zone_border.png) no-repeat,url(../img/step3_zone_bg1.png) no-repeat;*/
     background: url(../img/step3-box3.png) no-repeat;
     background-size: 100% 100%;
@@ -605,7 +602,7 @@ ul, li {
 
 .echart-con.loaded{
     opacity: 1;
-    transform: translate3d(0,0,0)
+    transform: translate3d(0,0,0);
 }
 
 .echart-con .item {
@@ -877,14 +874,13 @@ ul, li {
     transform:translate3d(0, 0, 0)
 }
 .overview{
-    position: absolute;
-    top:265px;
-    left:60px;
+    position: fixed;
     opacity: 0;
-    z-index: 23;
     transform:translate3d(600px, 0, 0);
     transition: all .5s;
-    width: 279px;
+    z-index: 100000;
+    bottom: 170px;
+    left: 28px;
 }
 .overview .map{
     
@@ -892,16 +888,8 @@ ul, li {
     border-radius: 10px;
     background: #02102f;
     box-shadow: inset 0 0 50px rgb(3, 191, 244), inset 0 0 80px rgba(3, 68, 244, 0.82), inset 0 0 150px rgba(0, 74, 255, 0.35),3px 3px 15px 3px rgba(0,0,0,.8);
-    width:277px;
+    width:170px;
     height: 170px;
-}
-@media screen and (max-height: 999px) {
-    .overview {
-        bottom: 260px;
-        right: 60px;
-        left: auto;
-        top: auto;
-    }
 }
 
 .info-window{
